--- a/index.html
+++ b/index.html
@@ -2,10 +2,36 @@
 <html>
 <head>
 	<meta charset="utf8">
-	<title>CEFET/RJ NF | Técnico em Informática | Design Web</title>
+	<title>CEFET/RJ NF </title>
+	<link rel="stylesheet" type="text/css" href="./css/estilo.css">
 </head>
 <body>
-	<h1>Bem-vindos ao curso de Design Web!</h1>
-	
+	<aside>
+		<img src="#" alt="Logo do CEFET/RJ">
+		<nav>
+			<ul>
+				<li><a href="#">Fundamentos da Web</a>
+				</li>
+				<li><a href="#">Fundamentos da Web</a>
+				</li>
+				<li><a href="#">Fundamentos da Web</a>
+				</li>
+				<li><a href="#">Fundamentos da Web</a>
+				</li>
+			</ul>
+		</nav>
+ 	</aside>
+	<main>
+		<h1 id="autor">Rafael Escalfoni</h1>
+		<article id="datas-importantes">
+			<h3>Datas Importantes</h3>
+		</article>
+		<section>
+			<h3>Recomendados</h3>
+		</section>
+		<section>
+			<h3>Eventos</h3>
+		</section>
+	</main>
 </body>
 </html>
