Site com primeiras modificações de CSS

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 	<aside>
-		<img src="#" alt="Logo do CEFET/RJ">
+		<img src="./img/logo.jpg" alt="Logo do CEFET/RJ">
 		<nav>
 			<ul>
-				<li><a href="#">Fundamentos da Web</a>
+				<li><a href="fundamentosWeb.html">Fundamentos da Web</a>
 				</li>
 				<li><a href="#">Fundamentos da Web</a>
 				</li>
