fundWeb com a lista parcial de alunos

--- a/fundamentosWeb.html
+++ b/fundamentosWeb.html
@@ -31,13 +31,54 @@
 		<article id="datas-importantes">
 			<h3>Alunos</h3>
 			<ul>
-				<li><a href="#">Ana</a></li>
-				<li><a href="#">Ana</a></li>
-				<li><a href="#">Ana</a></li>
-				<li><a href="#">Ana</a></li>
+				<li><a href="">Alex Júnior da Silva</a></li>
+				<li><a href="https://amandafully.github.io/">Amanda Samara Fully Teodoro</a></li>
+				<li><a href="">Arthur Tavares Cardoso</a></li>
+				<li><a href="">Antonio Henrique Gomes Fournier Lauria</a></li>
+				<li><a href="https://carolinemarchon.github.io">Caroline Hermenegildo Marchon</a></li>
+				<li><a href="">Elton Charles Domingues de Oliveira</a></li>
+				<li><a href="https://FelippePaulo.github.io">Felippe Paulo de Barros Ribeiro</a></li>
+				<li><a href="">Gabriel Buquer Barroso</a></li>
+				<li><a href="">Glauber da Silva Gomes Macedo</a></li>
+				<li><a href="">Guilherme Azis Pinto</a></li>
+				<li><a href="https://gustavohrg23.github.io">Gustavo Heringer de Oliveira</a></li>
+				<li><a href="">Heloíse Silva Santos</a></li>
+				<li><a href="">Hitallo Freitas da Penha Telles</a></li>
+				<li><a href="">Jairo Luckas Braganca Souza</a></li>
+				<li><a href="">Jean Poubel Maffort da Rocha</a></li>
+				<li><a href="https://joaoknoller.github.io/">João Felipe Knoller Marques</a></li>
+				<li><a href="https://jpmonnerat.github.io/">João Pedro Mullulo Monnerat Viana</a></li>
+				<li><a href="">João Victor Dias da Silva</a></li>
+				<li><a href="">Juan Victor Oliveira Silva</a></li>
+				<li><a href="">Luan Enzler Anuda</a></li>
+				<li><a href="">Lucas Bertoloto Martins</a></li>
+				<li><a href="">Lucas de Souza Mansur Pereira</a></li>
+				<li><a href="">Lucas Gomes Barboza</a></li>
+				<li><a href="">Marcos Antonio Pereira Junior</a></li>
+				<li><a href="">Marcos Vinicius da Silva Ramos</a></li>
+				<li><a href="">Maria Luiza Carvalho Sabino</a></li>
+				<li><a href="">Matheus da Silva Correa</a></li>
+				<li><a href="https://OtavioMC.github.io">Otávio Mendonça da Costa</a></li>
+				<li><a href="">Rafaela Muniz Silva</a></li>
+				<li><a href="">Raide da Silva Junior</a></li>
+				<li><a href="">Rannier Mattos dos Santos</a></li>
+				<li><a href="https://rebecamarii.github.io">Rebeca Mari Assumpção dos Santos</a></li>
+				<li><a href="#">Tobias Ferreira da Silva</a></li>
+				<li><a href="https://ViniSiqueira00.github.io/">Vinícius de Oliveira Siqueira</a></li>
+				<li><a href="https://vitorhugorangel.github.io">Vitor Hugo Rangel de Andrade</a></li>
+				<li><a href="https://wilsongsf.github.io">Wilson Gomes da Silva Filho</a></li>
+				<li><a href="https://YgorGabriel99.github.io">Ygor Gabriel de Freitas Ferreira</a></li>
 			</ul>
 
 		</article>
 	</main>
 </body>
 </html>
+
+
+
+
+
+
+
+
