Adicionando novos alunos

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			<ul>
 				<li><a href="fundamentosWeb.html">Fundamentos da Web</a>
 				</li>
-				<li><a href="#">Fundamentos da Web</a>
+				<li><a href="progClientesWeb.html">Programação de Clientes Web</a>
 				</li>
 				<li><a href="#">Fundamentos da Web</a>
 				</li>
