--- a/progClientesWeb.html
+++ b/progClientesWeb.html
@@ -34,6 +34,7 @@
 				<li><a href="https://anatelles.github.io">Ana Clara Barbosa Teles</a></li>
 				<li><a href="https://annachazan.github.io">Anna Beatriz Chaboudet Chazan</a></li>
 				<li><a href="http://carloseduardobanjar.github.io/">Carlos Eduardo Banjar</a></li>
+				<li><a href="http://dgneves.github.io/">Douglas de Lima Neves</a></li>
 				<li><a href="https://professormirim.github.io/">Cauã Pascoal Santos</a></li>
 				<li><a href="https://evelineeu.github.io/">Evelyn Juvêncio</a></li>
 				<li><a href="https://fastestfoxy.github.io/">Eduardo Costa de Almeida</a></li>
