--- a/fundamentosWeb.html
+++ b/fundamentosWeb.html
@@ -31,7 +31,7 @@
 		<article id="datas-importantes">
 			<h3>Alunos</h3>
 			<ul>
-				<li><a href="">Alex Júnior da Silva</a></li>
+				<li><a href="https://alexjunior.github.io/">Alex Júnior da Silva</a></li>
 				<li><a href="https://amandafully.github.io/">Amanda Samara Fully Teodoro</a></li>
 				<li><a href="">Arthur Tavares Cardoso</a></li>
 				<li><a href="">Antonio Henrique Gomes Fournier Lauria</a></li>
@@ -53,7 +53,7 @@
 				<li><a href="">Luan Enzler Anuda</a></li>
 				<li><a href="">Lucas Bertoloto Martins</a></li>
 				<li><a href="">Lucas de Souza Mansur Pereira</a></li>
-				<li><a href="">Lucas Gomes Barboza</a></li>
+				<li><a href="https://lucasbarboza97.github.io">Lucas Gomes Barboza</a></li>
 				<li><a href="">Marcos Antonio Pereira Junior</a></li>
 				<li><a href="">Marcos Vinicius da Silva Ramos</a></li>
 				<li><a href="">Maria Luiza Carvalho Sabino</a></li>
@@ -74,11 +74,3 @@
 	</main>
 </body>
 </html>
-
-
-
-
-
-
-
-
