--- a/progClientesWeb.html
+++ b/progClientesWeb.html
@@ -31,42 +31,53 @@
 		<article id="datas-importantes">
 			<h3>Turma A</h3>
 			<ul>
-				<li><a href="https://anatelles.github.io">Ana Clara Barbosa Teles</a></li>
+				<li><a href="">Artur Alves de Oliveira</a></li>
+				<li><a href="https://anatelles.github.io">Ana Clara Barbosa Teles Porto</a></li>
 				<li><a href="https://annachazan.github.io">Anna Beatriz Chaboudet Chazan</a></li>
-				<li><a href="http://carloseduardobanjar.github.io/">Carlos Eduardo Banjar</a></li>
-				<li><a href="http://dgneves.github.io/">Douglas de Lima Neves</a></li>
-				<li><a href="https://professormirim.github.io/">Cauã Pascoal Santos</a></li>
-				<li><a href="https://evelineeu.github.io/">Evelyn Juvêncio</a></li>
-				<li><a href="https://fastestfoxy.github.io/">Eduardo Costa de Almeida</a></li>
+				<li><a href="http://carloseduardobanjar.github.io/">Carlos Eduardo de Schuller Banjar</a></li>
+				<li><a href="http://dgneves.github.io/">Douglas de Lima Neves Ribeiro</a></li>
+				<li><a href="https://professormirim.github.io/">Cauã Pascoal Santos Junger</a></li>
+				<li><a href="https://evelineeu.github.io/">Evelyn Juvêncio Conceição Ortega</a></li>
+				<li><a href="https://fastestfoxy.github.io/">Eduardo Costa de Almeida Silva</a></li>
+				<li><a href="https://FilipeQuintanilhaEvangelista.github.io">Filipe Quintanilha Evangelista</a></li>
 				<li><a href="https://gabrielonline.github.io">Gabriel Corrêa dos Santos</a></li>
+				<li><a href="">Gabriel Moura Fernandes</a></li>
+				<li><a href="https://guilhermrosa.github.io">Guilherme Carvalho da Rosa</a></li>
+				<li><a href="https://srevolutionyt.github.io/">Ian de Aquino Bianquini</a></li>
+				<li><a href="https://larissa-22.github.io">Larissa Martinez Schumacker</a></li>
 				<li><a href="https://lucassancho.github.io/">Lucas Sancho Lima</a></li>
-				<li><a href="https://marcoarnetto.github.io">Marco Antônio Rocha</a></li>
+				<li><a href="">Lucas Dalben Curty Badini</a></li>
+				<li><a href="https://marcoarnetto.github.io">Marco Antônio Rocha Netto</a></li>
 				<li><a href="https://luciusfaltz.github.io">Lucius Faltz Lassarote</a></li>
-				<li><a href="https://mylena21.github.io">Mylena Pimentel</a></li>
-				<li><a href="https://larissa-22.github.io">Larissa Martinez</a></li>
-				<li><a href="https://guilhermrosa.github.io">Guilherme Rosa</a></li>
-				<li><a href="https://srevolutionyt.github.io/">Ian de Aquino Bquini</a></li>
 				<li><a href="https://luizarotina.github.io">Luiza Rotina de Frias</a></li>
+
+			</ul>
+			<h3> Turma B</h3>
+			<ul>
+				<li><a href="https://mariaclaraadame.github.io">Maria Clara Adame Barros Sanglard</a></li>
+				<li><a href="https://itsmariaclara12.github.io">Maria Clara Monteiro Pacheco</a></li>
+				<li><a href="https://mariaeduarda24.github.io">Maria Eduarda Mattos Marinho</a></li>
+				<li><a href="https://maribel2711.github.io">Maria Isabel Moura Severo Coimbra</a></li>
+				<li><a href="https://malu19.github.io">Maria Luiza Rodrigues Jiquiriçá</a></li>
 				<li><a href="https://marianaantonio.github.io">Mariana Antônio Veiga Faria</a></li>
 				<li><a href="https://maysa195.github.io">Maysa Rocha de Aquino</a></li>
-				<li><a href="https://mariaclaraadame.github.io">Maria Clara Adame Barros Sanglard</a></li>
-				<li><a href="https://malu19.github.io">Maria Luiza Rodrigues Jiquiriçá</a></li>
-				<li><a href="https://itsmariaclara12.github.io">Maria Clara Monteiro Pacheco</a></li>
-				<li><a href="https://maribel2711.github.io">Maria Isabel Moura Severo Coimbra</a></li>
+				<li><a href="https://mylena21.github.io">Mylena da Cunha Azevedo Pimentel</a></li>
+				<li><a href="">Pedro Kepler Lage Cardinot</a></li>
+				<li><a href="">Rafael Leite Badini</a></li>
 				<li><a href="https://reazevedo1.github.io">Rebeca de Azevedo Pereira</a></li>
 				<li><a href="https://rebeca112112.github.io">Rebeca Marques Fernandes</a></li>
 				<li><a href="https://saulindotrem.github.io">Saulo Klein Nery</a></li>
-				<li><a href="https://thais-mw.github.io">Thaís Mujnier Wermelinger</a></li>
+				<li><a href="https://netinzik.github.io">Sebastião Gonçalves Ferreira Neto</a></li>
+				<li><a href="https://thais-mw.github.io">Thaís Munier Wermelinger</a></li>
 				<li><a href="https://thiagodurso.github.io">Thiago Durso de Oliveira</a></li>
+				<li><a href="https://victors222.github.io">Victor Torquato Stutz</a></li>
 				<li><a href="https://Wellingtonwanderosfky.github.io">Wellington Wanderosfky Pedro</a></li>
 
 			</ul>
-			<h3>Turma B</h3>
-			<ul>
-				<li><a href=""></a></li>
-				
-			</ul>
+
 		</article>
 	</main>
 </body>
 </html>
+
+
