--- a/progClientesWebAlunos.html
+++ b/progClientesWebAlunos.html
@@ -29,20 +29,11 @@
  	</aside>
 	<main>
 		<h1 class="titulo titulo-principal">Programação de Clientes Web</h1>
-		<span class="titulo titulo-secundario">Horário das reuniões: quartas-feiras, 10:55 - 11:35</span>
-		<p>Nossas atividades deverão ser publicadas nas páginas dos alunos.
-		</p>
-		<h3>Avaliação</h3>
-		<p>As atividades avaliativas do curso serão realizadas ao longo do curso, seguindo uma estrutura de aulas orientada a projetos.
-		</p>
-		<h3>Fontes Recomendadas</h3>
-		<p>Os alunos devem acompanhar as vídeoaulas de JavaScript do <a href="https://app.rocketseat.com.br/starter">curso Rockseat</a>. Também utilizaremos outros materiais de apoio que serão disponibilizados pelos canais oficiais do CEFET, sobretudo o MS Teams.
-		</p>
-
+		<h2 class="titulo titulo-secundario">Turmas 2020</h2>
 		<article id="datas-importantes">
 			<h3>Turma A</h3>
 			<ul>
-				<li><a href="https://arturoliveira1212.github.io">Artur Alves de Oliveira</a></li>
+				<li><a href="">Artur Alves de Oliveira</a></li>
 				<li><a href="https://anatelles.github.io">Ana Clara Barbosa Teles Porto</a></li>
 				<li><a href="https://annachazan.github.io">Anna Beatriz Chaboudet Chazan</a></li>
 				<li><a href="http://carloseduardobanjar.github.io/">Carlos Eduardo de Schuller Banjar</a></li>
