--- a/fundamentosWeb.html
+++ b/fundamentosWeb.html
@@ -29,7 +29,19 @@
 		<h1 class="titulo titulo-principal">Rafael Escalfoni</h1>
 		<h2 class="titulo titulo-secundario">Fundamentos da Web</h2>
 		<article id="datas-importantes">
+			<h3>Avaliação</h3>
+			<p>
+				As atividades avaliativas do curso serão realizadas ao longo do curso, seguindo uma estrutura de aulas orientada a projetos.
+			</p>
+			<h3>Fontes Recomendadas</h3>
+			<p>
+				Os alunos devem acompanhar os materiais de apoio disponibilizados pelos canais oficiais do CEFET, sobretudo o MS Teams. Há uma farta literatura sobre a disciplina, tais como <a href="https://www.w3schools.com/">W3Schools</a>, <a href="https://rocketseat.com.br/">RocketSeat</a> e outros tantos canais recomendados durante as aulas.
+			</p>
+			<h3>Atividades</h3>
+			<h5>Trabalho</h5>
+			<h6>Entregas</h6> 
 			<h3>Alunos</h3>
+			<div
 			<ul>
 				<li><a href="https://alexjunior.github.io/">Alex Júnior da Silva</a></li>
 				<li><a href="https://amandafully.github.io/">Amanda Samara Fully Teodoro</a></li>
@@ -41,9 +53,9 @@
 				<li><a href="">Gabriel Buquer Barroso</a></li>
 				<li><a href="">Glauber da Silva Gomes Macedo</a></li>
 				<li><a href="">Guilherme Azis Pinto</a></li>
-				<li><a href="https://gustavohrg23.github.io">Gustavo Heringer de Oliveira</a></li>
+				<li><a href="https://gustavohrg23.github.io/">Gustavo Heringer de Oliveira</a></li>
 				<li><a href="">Heloíse Silva Santos</a></li>
-				<li><a href="">Hitallo Freitas da Penha Telles</a></li>
+				<li><a href="https://misdreecko.github.io/">Hitallo Freitas da Penha Telles</a></li>
 				<li><a href="">Jairo Luckas Braganca Souza</a></li>
 				<li><a href="">Jean Poubel Maffort da Rocha</a></li>
 				<li><a href="https://joaoknoller.github.io/">João Felipe Knoller Marques</a></li>
