Adicionando logo do Cefet

--- a/fund-web-2020_1.html
+++ b/fund-web-2020_1.html
@@ -184,6 +184,7 @@ Released   : 20130902
 		-->
 		
 		<footer id="copyright">
+			<img src="./images/cefet.png">
 			<span>Design by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>.</span>
 		</footer>
 	</main>
