Ajustes no layout

--- a/index.html
+++ b/index.html
@@ -105,10 +105,11 @@ Released   : 20130902
 					<figcaption>Simpósio Brasileiro de Sistemas de Informação SBSI 2020</figcaption>
 				</figure>
 				<p class="date-poster">
-					<b>6</b> de Novembro <span>2020</span>
+					<b>6</b> de Novembro <span>de 2020</span>
 				</p>
 				<p>
-					<a href="https://www.researchgate.net/publication/343452639_Analyzing_Social_Relations_in_Startup_Ecosystems">Apresentamos na trilha principal do evento o trabalho intitulado <b>"Analyzing Social Relations in Startup Ecosystems"</b>. Autores: Rafael Escalfoni, Mônica F. da Silva e Jonice Oliveira.</a>
+					<a href="https://www.researchgate.net/publication/343452639_Analyzing_Social_Relations_in_Startup_Ecosystems">Apresentamos na trilha principal do evento o trabalho intitulado <b>"Analyzing Social Relations in Startup Ecosystems"</b>. </p>
+				<p>Autores: Rafael Escalfoni, Mônica F. da Silva e Jonice Oliveira.</a>
 				</p>
 			</div>
 
@@ -118,10 +119,12 @@ Released   : 20130902
 					<figcaption>Simpósio Brasileiro de Sistemas de Informação SBSI 2020</figcaption>
 				</figure>
 				<p class="date-poster">
-					<b>6</b> de Novembro <span>2020</span>
+					<b>6</b> de Novembro <span> de 2020</span>
 				</p>
 				<p>
-					<a href="https://www.researchgate.net/publication/345747252_Coral_Platform_The_Smart_Startup_Ecosystem_Tool">Apresentamos no Encontro de Inovação em Sistemas de informação um demo sobre a ferramenta Coral. Artigo intitulado <b>"Coral Platform: The Smart Startup Ecosystem Tool"</b>. Autores: Rafael Escalfoni, Leonardo Marinho, Camila Lacerda, Rodrigo Santos, Kesia Mamede, Mônica F. da Silva e Jonice Oliveira.</a>
+					<a href="https://www.researchgate.net/publication/345747252_Coral_Platform_The_Smart_Startup_Ecosystem_Tool">Apresentamos no Encontro de Inovação em Sistemas de informação um demo sobre a ferramenta Coral. Artigo intitulado <b>"Coral Platform: The Smart Startup Ecosystem Tool"</b>. 
+				</p>
+				<p>Autores: Rafael Escalfoni, Leonardo Marinho, Camila Lacerda, Rodrigo Santos, Kesia Mamede, Mônica F. da Silva e Jonice Oliveira.</a>
 				</p>
 			</div>
 
@@ -131,7 +134,7 @@ Released   : 20130902
 					<figcaption>Exposição de Trabalhos Acadêmicos da Região Serrana - Etarserra 2020</figcaption>
 				</figure>
 				<p class="date-poster">
-					<b>15</b> Outubro <span>2020</span>
+					<b>15</b> Outubro <span> de 2020</span>
 				</p>
 				<p>
 					<a href="http://www.etarserra.iprj.uerj.br/orais-sessoes-tematicas/">ETARSERRA é um evento acadêmico-científico, tecnológico e cultural, que tem como proposta reunir estudantes de ensino médio, graduação e pós-graduação da região serrana do estado do RJ e regiões vizinhas. </a>
