--- a/design-web-2020_1.html
+++ b/design-web-2020_1.html
@@ -21,7 +21,15 @@ Released   : 20130902
 	<link href="./css/fonts.css" rel="stylesheet" type="text/css" media="all" />
 
 	<!--[if IE 6]><link href="default_ie6.css" rel="stylesheet" type="text/css" /><![endif]-->
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-17TVKJLFYM"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
 
+	  gtag('config', 'G-17TVKJLFYM');
+	</script>
 </head>
 <body>
 <div id="page" class="container">
