Ajustes nas páginas VS Code

--- a/design-web-2020_1.html
+++ b/design-web-2020_1.html
@@ -76,7 +76,7 @@ Released   : 20130902
 				<li><a href="">Arthur Ferreira Gomes</a></li>
 				<li><a href="">Bernardo Rocha dos Santos Jacob Cavalheiro</a></li>
 				<li><a href="">Cléo Pereira e Ferreira</a></li>
-				<li><a href="">Daniela Moreira Faria Moraes</a></li>
+				<li><a href="https://daniela-moraesbr.github.io">Daniela Moreira Faria Moraes</a></li>
 				<li><a href="">Denzel Vianna de Farias</a></li>
 				<li><a href="">Everson Marqui Junior</a></li>
 				<li><a href="">Gabriel Araujo Sinigalhe</a></li>
@@ -95,12 +95,12 @@ Released   : 20130902
 				<li><a href="">Kayllane Bastos Sanches Cardoso</a></li>
 				<li><a href="">Lucas Marra dos Santos</a></li>
 				<li><a href="">Luiz Gabriel de Souza Oliveira</a></li>
-				<li><a href="">Luiza Barroso Leal Eller</a></li>
+				<li><a href="https://ellerluiza.github.io">Luiza Barroso Leal Eller</a></li>
 				<li><a href="">Maurício Pará Roza Muniz de Aguiar</a></li>
 				<li><a href="">Nicolas Dias Eller</a></li>
 				<li><a href="">Pablo Balman Cereja Badini</a></li>
 				<li><a href="">Victor Aquino de Avellar Lacerda Lomba</a></li>
-				<li><a href="">Yan Machado Leoncio</a></li>
+				<li><a href="https://StroxG0d.github.io">Yan Machado Leoncio</a></li>
 				<li><a href="">Yuri Vazquez Chapeta da Silva</a></li>
 			</ul>
 			</div>
