--- a/gci-2020_1.html
+++ b/gci-2020_1.html
@@ -13,7 +13,7 @@ Released   : 20130902
 <html lang="pt-br">
 <head>
 	<meta charset="utf-8" >
-	<title>Rafael Escalfoni | Programação de Clientes Web</title>
+	<title>Rafael Escalfoni | Gestão do Conhecimento e da Informação</title>
 	<meta name="keywords" content="Professor, Pesquisador" />
 	<meta name="description" content="" />
 	<link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900" rel="stylesheet" />
