--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ Released   : 20130902
 		</div>
 		<nav id="menu">
 			<ul>
-				<li class="current_page_item"><a href="index.html" accesskey="1" title="">Início</a></li>
+				<li class="current_page_item"><a href="#" accesskey="1" title="">Início</a></li>
 				<li><a href="ensino.html" accesskey="2" title="Ensino">Ensino</a></li>
 				<li><a href="pesquisa.html" accesskey="3" title="Pesquisa">Pesquisa</a></li>
 				<li><a href="extensao.html" accesskey="4" title="Extensão">Extensão</a></li>
