--- a/fund-web-2020_1.html
+++ b/fund-web-2020_1.html
@@ -13,7 +13,7 @@ Released   : 20130902
 <html lang="pt-br">
 <head>
 	<meta charset="utf-8" >
-	<title>Rafael Escalfoni</title>
+	<title>Rafael Escalfoni | Fundamentos da Web</title>
 	<meta name="keywords" content="Professor, Pesquisador" />
 	<meta name="description" content="" />
 	<link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900" rel="stylesheet" />
@@ -74,33 +74,33 @@ Released   : 20130902
 			<ul class="actions">
 				<li><a href="https://alexjunior2021.github.io/">Alex Júnior da Silva</a></li>
 				<li><a href="https://amandafully.github.io/">Amanda Samara Fully Teodoro</a></li>
-				<li><a href="">Arthur Tavares Cardoso</a></li>
+				<li><a href="https://github.com/arthurthorp/economy">Arthur Tavares Cardoso</a></li>
 				<li><a href="">Antonio Henrique Gomes Fournier Lauria</a></li>
 				<li><a href="https://carolinemarchon.github.io">Caroline Hermenegildo Marchon</a></li>
 				<li><a href="">Elton Charles Domingues de Oliveira</a></li>
 				<li><a href="https://FelippePaulo.github.io">Felippe Paulo de Barros Ribeiro</a></li>
-				<li><a href="">Gabriel Buquer Barroso</a></li>
+				<li><a href="https://github.com/gabrielbuquer/clean-energy/">Gabriel Buquer Barroso</a></li>
 				<li><a href="">Glauber da Silva Gomes Macedo</a></li>
 				<li><a href="">Guilherme Azis Pinto</a></li>
 				<li><a href="https://gustavohrg23.github.io/">Gustavo Heringer de Oliveira</a></li>
 				<li><a href="">Heloíse Silva Santos</a></li>
 				<li><a href="https://misdreecko.github.io/">Hitallo Freitas da Penha Telles</a></li>
 				<li><a href="">Jairo Luckas Braganca Souza</a></li>
-				<li><a href="">Jean Poubel Maffort da Rocha</a></li>
+				<li><a href="https://jeanpoubel.github.io/">Jean Poubel Maffort da Rocha</a></li>
 				<li><a href="https://joaoknoller.github.io/">João Felipe Knoller Marques</a></li>
 				<li><a href="https://jpmonnerat.github.io/">João Pedro Mullulo Monnerat Viana</a></li>
 				<li><a href="">João Victor Dias da Silva</a></li>
-				<li><a href="">Juan Victor Oliveira Silva</a></li>
+				<li><a href="https://juanvictoro.github.io/against-covid19/">Juan Victor Oliveira Silva</a></li>
 			</ul>
 			</div>
 			<div class="boxB">
 			<ul class="actions">
-				<li><a href="">Luan Enzler Anuda</a></li>
-				<li><a href="">Lucas Bertoloto Martins</a></li>
+				<li><a href="https://luanenzleranuda.github.io/">Luan Enzler Anuda</a></li>
+				<li><a href="https://drive.google.com/drive/folders/1gURoovfb8CP-S0sd6TW5BhIRJuCuj6Ah">Lucas Bertoloto Martins</a></li>
 				<li><a href="">Lucas de Souza Mansur Pereira</a></li>
 				<li><a href="https://lucasbarboza97.github.io">Lucas Gomes Barboza</a></li>
-				<li><a href="">Marcos Antonio Pereira Junior</a></li>
-				<li><a href="">Marcos Vinicius da Silva Ramos</a></li>
+				<li><a href="https://marcos-pereira-jr.github.io">Marcos Antonio Pereira Junior</a></li>
+				<li><a href="https://mviniciusramos.github.io">Marcos Vinicius da Silva Ramos</a></li>
 				<li><a href="">Maria Luiza Carvalho Sabino</a></li>
 				<li><a href="">Matheus da Silva Correa</a></li>
 				<li><a href="https://OtavioMC.github.io">Otávio Mendonça da Costa</a></li>
@@ -109,7 +109,7 @@ Released   : 20130902
 				<li><a href="">Rannier Mattos dos Santos</a></li>
 				<li><a href="https://rebecamarii.github.io">Rebeca Mari Assumpção dos Santos</a></li>
 				<li><a href="#">Tobias Ferreira da Silva</a></li>
-				<li><a href="https://ViniSiqueira00.github.io/">Vinícius de Oliveira Siqueira</a></li>
+				<li><a href="https://no-hunger.vercel.app/">Vinícius de Oliveira Siqueira</a></li>
 				<li><a href="https://vitorhugorangel.github.io">Vitor Hugo Rangel de Andrade</a></li>
 				<li><a href="https://wilsongsf.github.io">Wilson Gomes da Silva Filho</a></li>
 				<li><a href="https://YgorGabriel99.github.io">Ygor Gabriel de Freitas Ferreira</a></li>
