Ajustes no CSS - área principal

--- a/design-web-2020_1.html
+++ b/design-web-2020_1.html
@@ -75,12 +75,12 @@ Released   : 20130902
 				<li><a href="">Ana Luisa Pereira Ferro</a></li>
 				<li><a href="">Arthur Ferreira Gomes</a></li>
 				<li><a href="">Bernardo Rocha dos Santos Jacob Cavalheiro</a></li>
-				<li><a href="">Cléo Pereira e Ferreira</a></li>
+				<li><a href="https://cleo-pereira.github.io/">Cléo Pereira e Ferreira</a></li>
 				<li><a href="https://daniela-moraesbr.github.io">Daniela Moreira Faria Moraes</a></li>
-				<li><a href="">Denzel Vianna de Farias</a></li>
+				<li><a href="https://Kenel1.github.io">Denzel Vianna de Farias</a></li>
 				<li><a href="">Everson Marqui Junior</a></li>
 				<li><a href="">Gabriel Araujo Sinigalhe</a></li>
-				<li><a href="">Hugo Billé Martins</a></li>
+				<li><a href="https://SuperHugoBr64.github.io">Hugo Billé Martins</a></li>
 				<li><a href="">Isabella Cabral Pinheiro</a></li>
 				<li><a href="">Jamily França Andrade</a></li>
 				<li><a href="">João Eduardo Pacheco Fernandez</a></li>
@@ -96,7 +96,7 @@ Released   : 20130902
 				<li><a href="">Lucas Marra dos Santos</a></li>
 				<li><a href="">Luiz Gabriel de Souza Oliveira</a></li>
 				<li><a href="https://ellerluiza.github.io">Luiza Barroso Leal Eller</a></li>
-				<li><a href="">Maurício Pará Roza Muniz de Aguiar</a></li>
+				<li><a href="https://mauriciopara.github.io">Maurício Pará Roza Muniz de Aguiar</a></li>
 				<li><a href="">Nicolas Dias Eller</a></li>
 				<li><a href="">Pablo Balman Cereja Badini</a></li>
 				<li><a href="">Victor Aquino de Avellar Lacerda Lomba</a></li>
@@ -105,6 +105,10 @@ Released   : 20130902
 			</ul>
 			</div>
 			<div style="clear: left"></div>
+			<h3>Grupos</h3>
+			<ul class="actions">
+				<li><a href="">???</a></li>
+			</ul>
 		</div>
 		<!--
 		<article id="featured">
