--- a/ensino.html
+++ b/ensino.html
@@ -62,25 +62,22 @@ Released   : 20130902
 				<span class="byline"><a href="index.html">Início</a> >> Ensino</span>
 			</nav>
 			<h2>Turmas</h2>
-			<h3>2020.1</h3>
-			<h4>Graduação em Sistemas de Informação</h4>
+			<span class="subtitle">2020.1</span>
+			<h3>Graduação em Sistemas de Informação</h3>
 			<ul class="actions">
-				<li><a href="#">Banco de Dados 2</a></li>
-				<li><a href="fund-web-2020_1.html">Fundamentos da Web</a></li>
-				<li><a href="fund-si-2020_1.html">Fundamentos de Sistemas de Informação</a></li>
-				<li><a href="gci-2020_1.html">Gestão do Conhecimento e da Informação</a></li>
-				<li><a href="#" class="button">Etiam posuere</a></li>
+				<li><a href="#" class="button">Banco de Dados 2</a></li>
+				<li><a href="fund-web-2020_1.html" class="button">Fundamentos da Web</a></li>
+				<li><a href="fund-si-2020_1.html" class="button">Fundamentos de Sistemas de Informação</a></li>
+				<li><a href="gci-2020_1.html" class="button">Gestão do Conhecimento e da Informação</a></li>
 			</ul>
-			<h4>Técnico em Informática</h4>
+			<h3>Técnico em Informática</h3>
 			<ul class="actions">
-				<li><a href="design-web-2020_1.html">Design Web</a></li>
-				<li><a href="prog-clientes-web-2020_1.html">Programação de Clientes Web</a></li>
-				<li><a href="#" class="button">Etiam posuere</a></li>
+				<li><a href="design-web-2020_1.html" class="button">Design Web</a></li>
+				<li><a href="prog-clientes-web-2020_1.html" class="button">Programação de Clientes Web</a></li>
 			</ul>
-			<h4>Graduação em Sistemas de Informação - <em>Maria da Graça</em></h4>
+			<h3>Graduação em Sistemas de Informação - <em>Maria da Graça</em></h3>
 			<ul class="actions">
-				<li><a href="#">Algoritmos e Estruturas de Dados 2</a></li>
-				<li><a href="#" class="button">Etiam posuere</a></li>
+				<li><a href="#" class="button">Algoritmos e Estruturas de Dados 2</a></li>
 			</ul>
 		</div>
 		<article id="featured">
