--- a/prog-clientes-web-2020_1.html
+++ b/prog-clientes-web-2020_1.html
@@ -114,7 +114,7 @@ Released   : 20130902
 					<li><a href="https://marianaantonio.github.io">Mariana Antônio Veiga Faria</a></li>
 					<li><a href="https://maysa195.github.io">Maysa Rocha de Aquino</a></li>
 					<li><a href="https://mylena21.github.io">Mylena da Cunha Azevedo Pimentel</a></li>
-					<li><a href="">Pedro Kepler Lage Cardinot</a></li>
+					<li><a href="https://PedroKepler.github.io">Pedro Kepler Lage Cardinot</a></li>
 					<li><a href="">Rafael Leite Badini</a></li>
 					<li><a href="https://reazevedo1.github.io">Rebeca de Azevedo Pereira</a></li>
 					<li><a href="https://rebeca112112.github.io">Rebeca Marques Fernandes</a></li>
