Ajustes nas páginas de Fund SI e GCI

--- a/gci-2020_1.html
+++ b/gci-2020_1.html
@@ -36,7 +36,7 @@ Released   : 20130902
 	<header id="header">
 		<div id="logo">
 			<img src="images/pic02.jpg" alt="Professor Rafael Escalfoni" />
-			<h1><a href="#">Rafael Escalfoni | Fundamentos de Sistemas de Informação</a></h1>
+			<h1><a href="#">Rafael Escalfoni</a></h1>
 			<span>CEFET/RJ <a href="http://www.cefet-rj.br/index.php/bacharelado-sistemas-informacao-nova-friburgo" rel="nofollow">Nova Friburgo</a></span>
 		</div>
 		<nav id="menu">
@@ -55,7 +55,7 @@ Released   : 20130902
 		</div>
 		<div id="welcome">
 			<div class="title">				
-				<h2>Gestão do Conhecimento e da Informação 2020</h2>
+				<h2>Gestão do Conhecimento e da Informação - 2020.1</h2>
 				<span class="byline">Horário das reuniões: quartas-feiras, 21:00 - 21:30</span>
 			</div>
 			<nav class="breadcrumb">
