Ajuste na página de Fund SI

--- a/fund-si-2020_1.html
+++ b/fund-si-2020_1.html
@@ -36,7 +36,7 @@ Released   : 20130902
 	<header id="header">
 		<div id="logo">
 			<img src="images/pic02.jpg" alt="Professor Rafael Escalfoni" />
-			<h1><a href="#">Rafael Escalfoni | Fundamentos de Sistemas de Informação</a></h1>
+			<h1><a href="#">Rafael Escalfoni</a></h1>
 			<span>CEFET/RJ <a href="http://www.cefet-rj.br/index.php/bacharelado-sistemas-informacao-nova-friburgo" rel="nofollow">Nova Friburgo</a></span>
 		</div>
 		<nav id="menu">
