novos links de design web

--- a/design-web-2020_1.html
+++ b/design-web-2020_1.html
@@ -72,7 +72,7 @@ Released   : 20130902
 			<h3>Alunos</h3>
 			<div class="boxB">
 			<ul class="actions">
-				<li><a href="">Ana Luisa Pereira Ferro</a></li>
+				<li><a href="https://analuisaferro.github.io">Ana Luisa Pereira Ferro</a></li>
 				<li><a href="">Arthur Ferreira Gomes</a></li>
 				<li><a href="">Bernardo Rocha dos Santos Jacob Cavalheiro</a></li>
 				<li><a href="https://cleo-pereira.github.io/">Cléo Pereira e Ferreira</a></li>
@@ -81,7 +81,7 @@ Released   : 20130902
 				<li><a href="">Everson Marqui Junior</a></li>
 				<li><a href="">Gabriel Araujo Sinigalhe</a></li>
 				<li><a href="https://SuperHugoBr64.github.io">Hugo Billé Martins</a></li>
-				<li><a href="">Isabella Cabral Pinheiro</a></li>
+				<li><a href="https://gitisa07.github.io">Isabella Cabral Pinheiro</a></li>
 				<li><a href="">Jamily França Andrade</a></li>
 				<li><a href="">João Eduardo Pacheco Fernandez</a></li>
 				<li><a href="">João Luiz Rezende Silva</a></li>
@@ -92,7 +92,7 @@ Released   : 20130902
 			<ul class="actions">
 				<li><a href="">João Victor Marcolino da Conceição</a></li>
 				<li><a href="">Kauã Villa Nova da Silva</a></li>
-				<li><a href="">Kayllane Bastos Sanches Cardoso</a></li>
+				<li><a href="https://KayllaneCardoso04.github.io">Kayllane Bastos Sanches Cardoso</a></li>
 				<li><a href="">Lucas Marra dos Santos</a></li>
 				<li><a href="">Luiz Gabriel de Souza Oliveira</a></li>
 				<li><a href="https://ellerluiza.github.io">Luiza Barroso Leal Eller</a></li>
