--- a/prog-clientes-web-2020_1.html
+++ b/prog-clientes-web-2020_1.html
@@ -70,7 +70,7 @@ Released   : 20130902
 			Listas
 				<ul>
 					<li>Lista 1</li>
-					<li>Lista 2</li>	
+					<li><a href="exemplo_cotacao.html">Conversor Moedas</a></li>	
 				</ul>
 			<h3>Fontes Recomendadas</h3>
 			<p>
