Adicionei novos links para páginas de alunos

--- a/design-web-2020_1.html
+++ b/design-web-2020_1.html
@@ -99,7 +99,7 @@ Released   : 20130902
 				<li><a href="https://mauriciopara.github.io">Maurício Pará Roza Muniz de Aguiar</a></li>
 				<li><a href="">Nicolas Dias Eller</a></li>
 				<li><a href="">Pablo Balman Cereja Badini</a></li>
-				<li><a href="">Victor Aquino de Avellar Lacerda Lomba</a></li>
+				<li><a href="https://victot21.github.io">Victor Aquino de Avellar Lacerda Lomba</a></li>
 				<li><a href="https://StroxG0d.github.io">Yan Machado Leoncio</a></li>
 				<li><a href="">Yuri Vazquez Chapeta da Silva</a></li>
 			</ul>
