Organizando pastas e alterando a estrutura da página de prog clientes web

--- a/prog-clientes-web-2020_1.html
+++ b/prog-clientes-web-2020_1.html
@@ -70,8 +70,13 @@ Released   : 20130902
 			Listas
 				<ul>
 					<li>Lista 1</li>
-					<li><a href="exemplo_cotacao.html">Conversor Moedas</a></li>	
+			
 				</ul>
+			<h3>Exemplos de aula</h3>
+			<ul>
+				<li><a href="./desenv_web/exemplos/exemplo_cotacao.html">Conversor Moedas</a></li>
+				<li><a href="./desenv_web/exemplos/receita.html">Proporções e Massa Fresca</a></li>
+			</ul>
 			<h3>Fontes Recomendadas</h3>
 			<p>
 				Os alunos devem acompanhar os materiais de apoio disponibilizados pelos canais oficiais do CEFET, sobretudo o MS Teams. Há diversas fontes na internet recomendadas, tais como <a href="https://www.w3schools.com/">W3Schools</a>, <a href="https://rocketseat.com.br/">RocketSeat</a> e outros tantos canais mencionada durante as aulas.
