Direcionando os sites dos alunos para nova aba

--- a/design-web-2020_1.html
+++ b/design-web-2020_1.html
@@ -72,36 +72,36 @@ Released   : 20130902
 			<h3>Alunos</h3>
 			<div class="boxB">
 			<ul class="actions">
-				<li><a href="https://analuisaferro.github.io">Ana Luisa Pereira Ferro</a></li>
-				<li><a href="">Arthur Ferreira Gomes</a></li>
-				<li><a href="">Bernardo Rocha dos Santos Jacob Cavalheiro</a></li>
-				<li><a href="https://cleo-pereira.github.io/">Cléo Pereira e Ferreira</a></li>
-				<li><a href="https://daniela-moraesbr.github.io">Daniela Moreira Faria Moraes</a></li>
-				<li><a href="https://Kenel1.github.io">Denzel Vianna de Farias</a></li>
-				<li><a href="">Everson Marqui Junior</a></li>
-				<li><a href="">Gabriel Araujo Sinigalhe</a></li>
-				<li><a href="https://SuperHugoBr64.github.io">Hugo Billé Martins</a></li>
-				<li><a href="https://gitisa07.github.io">Isabella Cabral Pinheiro</a></li>
-				<li><a href="">Jamily França Andrade</a></li>
-				<li><a href="">João Eduardo Pacheco Fernandez</a></li>
-				<li><a href="">João Luiz Rezende Silva</a></li>
+				<li><a href="https://analuisaferro.github.io" target="_blank">Ana Luisa Pereira Ferro</a></li>
+				<li><a href="" target="_blank">Arthur Ferreira Gomes</a></li>
+				<li><a href="" target="_blank">Bernardo Rocha dos Santos Jacob Cavalheiro</a></li>
+				<li><a href="https://cleo-pereira.github.io/" target="_blank">Cléo Pereira e Ferreira</a></li>
+				<li><a href="https://daniela-moraesbr.github.io" target="_blank">Daniela Moreira Faria Moraes</a></li>
+				<li><a href="https://Kenel1.github.io" target="_blank">Denzel Vianna de Farias</a></li>
+				<li><a href="" target="_blank">Everson Marqui Junior</a></li>
+				<li><a href="" target="_blank">Gabriel Araujo Sinigalhe</a></li>
+				<li><a href="https://SuperHugoBr64.github.io" target="_blank">Hugo Billé Martins</a></li>
+				<li><a href="https://gitisa07.github.io" target="_blank">Isabella Cabral Pinheiro</a></li>
+				<li><a href="" target="_blank">Jamily França Andrade</a></li>
+				<li><a href="" target="_blank">João Eduardo Pacheco Fernandez</a></li>
+				<li><a href="" target="_blank">João Luiz Rezende Silva</a></li>
 
 			</ul>
 			</div>
 			<div class="boxB">
 			<ul class="actions">
-				<li><a href="">João Victor Marcolino da Conceição</a></li>
-				<li><a href="https://Kauavillan.github.io">Kauã Villa Nova da Silva</a></li>
-				<li><a href="https://KayllaneCardoso04.github.io">Kayllane Bastos Sanches Cardoso</a></li>
-				<li><a href="">Lucas Marra dos Santos</a></li>
-				<li><a href="">Luiz Gabriel de Souza Oliveira</a></li>
-				<li><a href="https://ellerluiza.github.io">Luiza Barroso Leal Eller</a></li>
-				<li><a href="https://mauriciopara.github.io">Maurício Pará Roza Muniz de Aguiar</a></li>
-				<li><a href="">Nicolas Dias Eller</a></li>
-				<li><a href="">Pablo Balman Cereja Badini</a></li>
-				<li><a href="https://victot21.github.io">Victor Aquino de Avellar Lacerda Lomba</a></li>
-				<li><a href="https://StroxG0d.github.io">Yan Machado Leoncio</a></li>
-				<li><a href="">Yuri Vazquez Chapeta da Silva</a></li>
+				<li><a href="" target="_blank">João Victor Marcolino da Conceição</a></li>
+				<li><a href="https://Kauavillan.github.io" target="_blank">Kauã Villa Nova da Silva</a></li>
+				<li><a href="https://KayllaneCardoso04.github.io" target="_blank">Kayllane Bastos Sanches Cardoso</a></li>
+				<li><a href="" target="_blank">Lucas Marra dos Santos</a></li>
+				<li><a href="" target="_blank">Luiz Gabriel de Souza Oliveira</a></li>
+				<li><a href="https://ellerluiza.github.io" target="_blank">Luiza Barroso Leal Eller</a></li>
+				<li><a href="https://mauriciopara.github.io" target="_blank">Maurício Pará Roza Muniz de Aguiar</a></li>
+				<li><a href="" target="_blank">Nicolas Dias Eller</a></li>
+				<li><a href="" target="_blank">Pablo Balman Cereja Badini</a></li>
+				<li><a href="https://victot21.github.io" target="_blank">Victor Aquino de Avellar Lacerda Lomba</a></li>
+				<li><a href="https://StroxG0d.github.io" target="_blank">Yan Machado Leoncio</a></li>
+				<li><a href="" target="_blank">Yuri Vazquez Chapeta da Silva</a></li>
 			</ul>
 			</div>
 			<div style="clear: left"></div>
