--- a/prog-clientes-web-2020_1.html
+++ b/prog-clientes-web-2020_1.html
@@ -86,49 +86,49 @@ Released   : 20130902
 			<div class="boxB">
 				<h3>Turma A</h3>
 				<ul>
-					<li><a href="https://arturoliveira1212.github.io">Artur Alves de Oliveira</a></li>
-					<li><a href="https://anatelles.github.io">Ana Clara Barbosa Teles Porto</a></li>
-					<li><a href="https://annachazan.github.io">Anna Beatriz Chaboudet Chazan</a></li>
-					<li><a href="http://carloseduardobanjar.github.io/">Carlos Eduardo de Schuller Banjar</a></li>
-					<li><a href="http://dgneves.github.io/">Douglas de Lima Neves Ribeiro</a></li>
-					<li><a href="https://professormirim.github.io/">Cauã Pascoal Santos Junger</a></li>
-					<li><a href="https://evelineeu.github.io/">Evelyn Juvêncio Conceição Ortega</a></li>
-					<li><a href="https://fastestfoxy.github.io/">Eduardo Costa de Almeida Silva</a></li>
-					<li><a href="https://FilipeQuintanilhaEvangelista.github.io">Filipe Quintanilha Evangelista</a></li>
-					<li><a href="https://gabrielonline.github.io">Gabriel Corrêa dos Santos</a></li>
-					<li><a href="">Gabriel Moura Fernandes</a></li>
-					<li><a href="https://guilhermrosa.github.io">Guilherme Carvalho da Rosa</a></li>
-					<li><a href="https://srevolutionyt.github.io/">Ian de Aquino Bianquini</a></li>
-					<li><a href="https://larissa-22.github.io">Larissa Martinez Schumacker</a></li>
-					<li><a href="https://lucassancho.github.io/">Lucas Sancho Lima</a></li>
-					<li><a href="">Lucas Dalben Curty Badini</a></li>
-					<li><a href="https://marcoarnetto.github.io">Marco Antônio Rocha Netto</a></li>
-					<li><a href="https://luciusfaltz.github.io">Lucius Faltz Lassarote</a></li>
-					<li><a href="https://luizarotina.github.io">Luiza Rotina de Frias</a></li>
+					<li><a href="https://arturoliveira1212.github.io" target="_blank">Artur Alves de Oliveira</a></li>
+					<li><a href="https://anatelles.github.io" target="_blank">Ana Clara Barbosa Teles Porto</a></li>
+					<li><a href="https://annachazan.github.io" target="_blank">Anna Beatriz Chaboudet Chazan</a></li>
+					<li><a href="http://carloseduardobanjar.github.io/" target="_blank">Carlos Eduardo de Schuller Banjar</a></li>
+					<li><a href="http://dgneves.github.io/" target="_blank">Douglas de Lima Neves Ribeiro</a></li>
+					<li><a href="https://professormirim.github.io/" target="_blank">Cauã Pascoal Santos Junger</a></li>
+					<li><a href="https://evelineeu.github.io/" target="_blank">Evelyn Juvêncio Conceição Ortega</a></li>
+					<li><a href="https://fastestfoxy.github.io/" target="_blank">Eduardo Costa de Almeida Silva</a></li>
+					<li><a href="https://FilipeQuintanilhaEvangelista.github.io" target="_blank">Filipe Quintanilha Evangelista</a></li>
+					<li><a href="https://gabrielonline.github.io" target="_blank">Gabriel Corrêa dos Santos</a></li>
+					<li><a href="" target="_blank">Gabriel Moura Fernandes</a></li>
+					<li><a href="https://guilhermrosa.github.io" target="_blank">Guilherme Carvalho da Rosa</a></li>
+					<li><a href="https://srevolutionyt.github.io/" target="_blank">Ian de Aquino Bianquini</a></li>
+					<li><a href="https://larissa-22.github.io" target="_blank">Larissa Martinez Schumacker</a></li>
+					<li><a href="https://lucassancho.github.io/" target="_blank">Lucas Sancho Lima</a></li>
+					<li><a href="" target="_blank">Lucas Dalben Curty Badini</a></li>
+					<li><a href="https://marcoarnetto.github.io" target="_blank">Marco Antônio Rocha Netto</a></li>
+					<li><a href="https://luciusfaltz.github.io" target="_blank">Lucius Faltz Lassarote</a></li>
+					<li><a href="https://luizarotina.github.io" target="_blank">Luiza Rotina de Frias</a></li>
 
 				</ul>
 			</div>
 			<div class="boxB">
 				<h3> Turma B</h3>
 				<ul>
-					<li><a href="https://mariaclaraadame.github.io">Maria Clara Adame Barros Sanglard</a></li>
-					<li><a href="https://itsmariaclara12.github.io">Maria Clara Monteiro Pacheco</a></li>
-					<li><a href="https://mariaeduarda24.github.io">Maria Eduarda Mattos Marinho</a></li>
-					<li><a href="https://maribel2711.github.io">Maria Isabel Moura Severo Coimbra</a></li>
-					<li><a href="https://malu19.github.io">Maria Luiza Rodrigues Jiquiriçá</a></li>
-					<li><a href="https://marianaantonio.github.io">Mariana Antônio Veiga Faria</a></li>
-					<li><a href="https://maysa195.github.io">Maysa Rocha de Aquino</a></li>
-					<li><a href="https://mylena21.github.io">Mylena da Cunha Azevedo Pimentel</a></li>
-					<li><a href="https://PedroKepler.github.io">Pedro Kepler Lage Cardinot</a></li>
-					<li><a href="">Rafael Leite Badini</a></li>
-					<li><a href="https://reazevedo1.github.io">Rebeca de Azevedo Pereira</a></li>
-					<li><a href="https://rebeca112112.github.io">Rebeca Marques Fernandes</a></li>
-					<li><a href="https://saulindotrem.github.io">Saulo Klein Nery</a></li>
-					<li><a href="https://netinzik.github.io">Sebastião Gonçalves Ferreira Neto</a></li>
-					<li><a href="https://thais-mw.github.io">Thaís Munier Wermelinger</a></li>
-					<li><a href="https://thiagodurso.github.io">Thiago Durso de Oliveira</a></li>
-					<li><a href="https://victors222.github.io">Victor Torquato Stutz</a></li>
-					<li><a href="https://Wellingtonwanderosfky.github.io">Wellington Wanderosfky Pedro</a></li>
+					<li><a href="https://mariaclaraadame.github.io" target="_blank">Maria Clara Adame Barros Sanglard</a></li>
+					<li><a href="https://itsmariaclara12.github.io" target="_blank">Maria Clara Monteiro Pacheco</a></li>
+					<li><a href="https://mariaeduarda24.github.io" target="_blank">Maria Eduarda Mattos Marinho</a></li>
+					<li><a href="https://maribel2711.github.io" target="_blank">Maria Isabel Moura Severo Coimbra</a></li>
+					<li><a href="https://malu19.github.io" target="_blank">Maria Luiza Rodrigues Jiquiriçá</a></li>
+					<li><a href="https://marianaantonio.github.io" target="_blank">Mariana Antônio Veiga Faria</a></li>
+					<li><a href="https://maysa195.github.io" target="_blank">Maysa Rocha de Aquino</a></li>
+					<li><a href="https://mylena21.github.io" target="_blank">Mylena da Cunha Azevedo Pimentel</a></li>
+					<li><a href="https://PedroKepler.github.io" target="_blank">Pedro Kepler Lage Cardinot</a></li>
+					<li><a href="" target="_blank">Rafael Leite Badini</a></li>
+					<li><a href="https://reazevedo1.github.io" target="_blank">Rebeca de Azevedo Pereira</a></li>
+					<li><a href="https://rebeca112112.github.io" target="_blank">Rebeca Marques Fernandes</a></li>
+					<li><a href="https://saulindotrem.github.io" target="_blank">Saulo Klein Nery</a></li>
+					<li><a href="https://netinzik.github.io" target="_blank">Sebastião Gonçalves Ferreira Neto</a></li>
+					<li><a href="https://thais-mw.github.io" target="_blank">Thaís Munier Wermelinger</a></li>
+					<li><a href="https://thiagodurso.github.io" target="_blank">Thiago Durso de Oliveira</a></li>
+					<li><a href="https://victors222.github.io" target="_blank">Victor Torquato Stutz</a></li>
+					<li><a href="https://Wellingtonwanderosfky.github.io" target="_blank">Wellington Wanderosfky Pedro</a></li>
 
 				</ul>
 			</div>
