Correções em links Prog Clientes Web

--- a/prog-clientes-web-2020_1.html
+++ b/prog-clientes-web-2020_1.html
@@ -89,8 +89,8 @@ Released   : 20130902
 					<li><a href="https://arturoliveira1212.github.io" target="_blank">Artur Alves de Oliveira</a></li>
 					<li><a href="https://anatelles.github.io" target="_blank">Ana Clara Barbosa Teles Porto</a></li>
 					<li><a href="https://annachazan.github.io" target="_blank">Anna Beatriz Chaboudet Chazan</a></li>
-					<li><a href="http://carloseduardobanjar.github.io/" target="_blank">Carlos Eduardo de Schuller Banjar</a></li>
-					<li><a href="http://dgneves.github.io/" target="_blank">Douglas de Lima Neves Ribeiro</a></li>
+					<li><a href="https://carloseduardobanjar.github.io/" target="_blank">Carlos Eduardo de Schuller Banjar</a></li>
+					<li><a href="https://dgneves.github.io/" target="_blank">Douglas de Lima Neves Ribeiro</a></li>
 					<li><a href="https://professormirim.github.io/" target="_blank">Cauã Pascoal Santos Junger</a></li>
 					<li><a href="https://evelineeu.github.io/" target="_blank">Evelyn Juvêncio Conceição Ortega</a></li>
 					<li><a href="https://fastestfoxy.github.io/" target="_blank">Eduardo Costa de Almeida Silva</a></li>
