--- a/design-web-2020_1.html
+++ b/design-web-2020_1.html
@@ -84,7 +84,7 @@ Released   : 20130902
 				<li><a href="https://gitisa07.github.io" target="_blank">Isabella Cabral Pinheiro</a></li>
 				<li><a href="" target="_blank">Jamily França Andrade</a></li>
 				<li><a href="" target="_blank">João Eduardo Pacheco Fernandez</a></li>
-				<li><a href="" target="_blank">João Luiz Rezende Silva</a></li>
+				<li><a href="https://JoaoLuizRSilva.github.io" target="_blank">João Luiz Rezende Silva</a></li>
 
 			</ul>
 			</div>
@@ -101,13 +101,22 @@ Released   : 20130902
 				<li><a href="" target="_blank">Pablo Balman Cereja Badini</a></li>
 				<li><a href="https://victot21.github.io" target="_blank">Victor Aquino de Avellar Lacerda Lomba</a></li>
 				<li><a href="https://StroxG0d.github.io" target="_blank">Yan Machado Leoncio</a></li>
-				<li><a href="" target="_blank">Yuri Vazquez Chapeta da Silva</a></li>
+				<li><a href="https://YuriVazquez.github.io" target="_blank">Yuri Vazquez Chapeta da Silva</a></li>
 			</ul>
 			</div>
 			<div style="clear: left"></div>
 			<h3>Grupos</h3>
 			<ul class="actions">
-				<li><a href="">???</a></li>
+				<li><strong>Grupo 1:</strong> Ana Luisa Pereira Ferro, Kayllane Bastos Sanches Cardoso e Jamily França Andrade</li>
+				<li><strong>Grupo 2:</strong> Everson Marqui Junior, Pablo Balman Cereja Badini e Isabella Cabral Pinheiro</li>
+				<li><strong>Grupo 3:</strong> Denzel Vianna de Farias e Yan Machado Leoncio</li>
+				<li><strong>Grupo 4:</strong> Kauã Villa Nova da Silva, Luiz Gabriel de Souza Oliveira e João Luiz Rezende Silva</li>
+				<li><strong>Grupo 5:</strong> Maurício Pará Roza Muniz de Aguiar, Hugo Billé Martins e Gabriel Araujo Sinigalhe</li>
+				<li><strong>Grupo 6:</strong> Cléo Pereira e Ferreira e Daniela Moreira Faria Moraes</li>
+				<li><strong>Grupo 7:</strong> João Victor Marcolino da Conceição, Luiza Barroso Leal Eller e Yuri Vazquez Chapeta da Silva</li>
+				<li><strong>Grupo 8:</strong> João Eduardo Pacheco Fernandez, Lucas Marra dos Santos e Victor Aquino de Avellar Lacerda Lomba </li>
+				<li><strong>Grupo 9:</strong> Arthur Ferreira Gomes</li>
+
 			</ul>
 		</div>
 		<!--
