--- a/design-web-2020_1.html
+++ b/design-web-2020_1.html
@@ -78,7 +78,7 @@ Released   : 20130902
 				<li><a href="https://cleo-pereira.github.io/" target="_blank">Cléo Pereira e Ferreira</a></li>
 				<li><a href="https://daniela-moraesbr.github.io" target="_blank">Daniela Moreira Faria Moraes</a></li>
 				<li><a href="https://Kenel1.github.io" target="_blank">Denzel Vianna de Farias</a></li>
-				<li><a href="" target="_blank">Everson Marqui Junior</a></li>
+				<li><a href="http://everson121.github.io/" target="_blank">Everson Marqui Junior</a></li>
 				<li><a href="" target="_blank">Gabriel Araujo Sinigalhe</a></li>
 				<li><a href="https://SuperHugoBr64.github.io" target="_blank">Hugo Billé Martins</a></li>
 				<li><a href="https://gitisa07.github.io" target="_blank">Isabella Cabral Pinheiro</a></li>
