Teste com o Visual Studio Code - usando o Git da ferramenta

--- a/design-web-2020_1.html
+++ b/design-web-2020_1.html
@@ -73,13 +73,13 @@ Released   : 20130902
 			<div class="boxB">
 			<ul class="actions">
 				<li><a href="https://analuisaferro.github.io" target="_blank">Ana Luisa Pereira Ferro</a></li>
-				<li><a href="" target="_blank">Arthur Ferreira Gomes</a></li>
+				<li><a href="https://google.com" target="_blank">Arthur Ferreira Gomes</a></li>
 				<li><a href="" target="_blank">Bernardo Rocha dos Santos Jacob Cavalheiro</a></li>
 				<li><a href="https://cleo-pereira.github.io/" target="_blank">Cléo Pereira e Ferreira</a></li>
 				<li><a href="https://daniela-moraesbr.github.io" target="_blank">Daniela Moreira Faria Moraes</a></li>
 				<li><a href="https://Kenel1.github.io" target="_blank">Denzel Vianna de Farias</a></li>
 				<li><a href="http://everson121.github.io/" target="_blank">Everson Marqui Junior</a></li>
-				<li><a href="" target="_blank">Gabriel Araujo Sinigalhe</a></li>
+				<li><a href="https://gabriel-sinigalhe.github.io/" target="_blank">Gabriel Araujo Sinigalhe</a></li>
 				<li><a href="https://SuperHugoBr64.github.io" target="_blank">Hugo Billé Martins</a></li>
 				<li><a href="https://gitisa07.github.io" target="_blank">Isabella Cabral Pinheiro</a></li>
 				<li><a href="" target="_blank">Jamily França Andrade</a></li>
