atividade de fund web

--- a/design-web-2020_1.html
+++ b/design-web-2020_1.html
@@ -73,7 +73,7 @@ Released   : 20130902
 			<div class="boxB">
 			<ul class="actions">
 				<li><a href="https://analuisaferro.github.io" target="_blank">Ana Luisa Pereira Ferro</a></li>
-				<li><a href="https://google.com" target="_blank">Arthur Ferreira Gomes</a></li>
+				<li><a href="https://gomesart.github.io/" target="_blank">Arthur Ferreira Gomes</a></li>
 				<li><a href="" target="_blank">Bernardo Rocha dos Santos Jacob Cavalheiro</a></li>
 				<li><a href="https://cleo-pereira.github.io/" target="_blank">Cléo Pereira e Ferreira</a></li>
 				<li><a href="https://daniela-moraesbr.github.io" target="_blank">Daniela Moreira Faria Moraes</a></li>
