--- a/fund-web-2020_1.html
+++ b/fund-web-2020_1.html
@@ -65,6 +65,12 @@ Released   : 20130902
 			<p>
 				As atividades avaliativas do curso serão realizadas ao longo do curso, seguindo uma estrutura de aulas orientada a projetos.
 			</p>
+			<h3>
+				Atividade
+			</h3>
+			<p>
+				Atividade de Javascript, jQuery e AJAX. Segue o <a href="./aula20021218/index.html">link</a>
+			</p>
 			<h3>Fontes Recomendadas</h3>
 			<p>
 				Os alunos devem acompanhar os materiais de apoio disponibilizados pelos canais oficiais do CEFET, sobretudo o MS Teams. Há uma farta literatura sobre a disciplina, tais como <a href="https://www.w3schools.com/">W3Schools</a>, <a href="https://rocketseat.com.br/">RocketSeat</a> e outros tantos canais recomendados durante as aulas.
