correções em link

--- a/fund-web-2020_1.html
+++ b/fund-web-2020_1.html
@@ -69,7 +69,7 @@ Released   : 20130902
 				Atividade
 			</h3>
 			<p>
-				Atividade de Javascript, jQuery e AJAX. Segue o <a href="./aula20021218/index.html">link</a>
+				Atividade de Javascript, jQuery e AJAX. Segue o <a target="_blank" href="https://rafaelescalfoni.github.io/aula20201218/index.html">link</a>.
 			</p>
 			<h3>Fontes Recomendadas</h3>
 			<p>
