--- a/fund-web-2020_1.html
+++ b/fund-web-2020_1.html
@@ -71,6 +71,7 @@ Released   : 20130902
 			<p>
 				Atividade de Javascript, jQuery e AJAX. Segue o <a target="_blank" href="https://rafaelescalfoni.github.io/aula20201218/index.html">link</a>.
 			</p>
+			<p>Exemplo da aula. Segue o <a target="_blank" href="https://rafaelescalfoni.github.io/aula20201218/exemplo.html">link</a></p>
 			<h3>Fontes Recomendadas</h3>
 			<p>
 				Os alunos devem acompanhar os materiais de apoio disponibilizados pelos canais oficiais do CEFET, sobretudo o MS Teams. Há uma farta literatura sobre a disciplina, tais como <a href="https://www.w3schools.com/">W3Schools</a>, <a href="https://rocketseat.com.br/">RocketSeat</a> e outros tantos canais recomendados durante as aulas.
