Algumas dicas para o trabalho

--- a/aula20201218/atividade01.html
+++ b/aula20201218/atividade01.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<script src="./js/jquery.min.js"></script>
+
 	<script src="./js/atividade01.js"></script>
 	<link rel="stylesheet" href="./css/estilo.css">
 </head>
@@ -36,6 +37,7 @@
 				<button id="adicionar">Adicionar</button>
 				<button id="excluir">Limpar</button>
 			</fieldset>
+			
 			<table id="acervo">
 				<tr>
 					<th>Título</th>
@@ -44,6 +46,7 @@
 					<th></th>
 				</tr>
 			</table>
+			<button id="apagarAcervo">Apagar</button>
 		</div>
         <footer></footer>
     </div>
