Com novos endereços de alunos de prog clientes web

--- a/prog-clientes-web-2020_1.html
+++ b/prog-clientes-web-2020_1.html
@@ -98,10 +98,10 @@ Released   : 20130902
 					<li><a href="https://gabrielonline.github.io" target="_blank">Gabriel Corrêa dos Santos</a></li>
 					<li><a href="" target="_blank">Gabriel Moura Fernandes</a></li>
 					<li><a href="https://guilhermrosa.github.io" target="_blank">Guilherme Carvalho da Rosa</a></li>
-					<li><a href="https://srevolutionyt.github.io/" target="_blank">Ian de Aquino Bianquini</a></li>
+					<li><a href="https://Ian-Aquino-Bianquini.github.io/" target="_blank">Ian de Aquino Bianquini</a></li>
 					<li><a href="https://larissa-22.github.io" target="_blank">Larissa Martinez Schumacker</a></li>
 					<li><a href="https://lucassancho.github.io/" target="_blank">Lucas Sancho Lima</a></li>
-					<li><a href="" target="_blank">Lucas Dalben Curty Badini</a></li>
+					<li><a href="https://lucasbadini.github.io" target="_blank">Lucas Dalben Curty Badini</a></li>
 					<li><a href="https://marcoarnetto.github.io" target="_blank">Marco Antônio Rocha Netto</a></li>
 					<li><a href="https://luciusfaltz.github.io" target="_blank">Lucius Faltz Lassarote</a></li>
 					<li><a href="https://luizarotina.github.io" target="_blank">Luiza Rotina de Frias</a></li>
@@ -132,7 +132,7 @@ Released   : 20130902
 
 				</ul>
 			</div>
-			<div style="clear: left"></div>
+			<div style="clear:left"></div>
 		</div>
 		<!--
 		<article id="featured">
