--- a/prog-clientes-web-2020_1.html
+++ b/prog-clientes-web-2020_1.html
@@ -101,7 +101,7 @@ Released   : 20130902
 					<li><a href="https://Ian-Aquino-Bianquini.github.io/" target="_blank">Ian de Aquino Bianquini</a></li>
 					<li><a href="https://larissa-22.github.io" target="_blank">Larissa Martinez Schumacker</a></li>
 					<li><a href="https://lucassancho.github.io/" target="_blank">Lucas Sancho Lima</a></li>
-					<li><a href="https://lucasbadini.github.io" target="_blank">Lucas Dalben Curty Badini</a></li>
+					<li><a href="https://lukin-github.github.io/" target="_blank">Lucas Dalben Curty Badini</a></li>
 					<li><a href="https://marcoarnetto.github.io" target="_blank">Marco Antônio Rocha Netto</a></li>
 					<li><a href="https://luciusfaltz.github.io" target="_blank">Lucius Faltz Lassarote</a></li>
 					<li><a href="https://luizarotina.github.io" target="_blank">Luiza Rotina de Frias</a></li>
@@ -120,7 +120,7 @@ Released   : 20130902
 					<li><a href="https://maysa195.github.io" target="_blank">Maysa Rocha de Aquino</a></li>
 					<li><a href="https://mylena21.github.io" target="_blank">Mylena da Cunha Azevedo Pimentel</a></li>
 					<li><a href="https://PedroKepler.github.io" target="_blank">Pedro Kepler Lage Cardinot</a></li>
-					<li><a href="" target="_blank">Rafael Leite Badini</a></li>
+					<li><a href="https://rafaelbadini.github.io" target="_blank">Rafael Leite Badini</a></li>
 					<li><a href="https://reazevedo1.github.io" target="_blank">Rebeca de Azevedo Pereira</a></li>
 					<li><a href="https://rebeca112112.github.io" target="_blank">Rebeca Marques Fernandes</a></li>
 					<li><a href="https://saulindotrem.github.io" target="_blank">Saulo Klein Nery</a></li>
